[ADD]: add manual character update trigger and sync status to administration view
